Tattoo convention mobile view fix

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -107,6 +107,10 @@ a:link,
   .nav-link {
     font-size: 12vw;
   }
+
+  .nav-link-menu {
+    font-size: 52px;
+}
 }
 .center {
   text-align: center;
